--- a/web/resources/css/main.css
+++ b/web/resources/css/main.css
@@ -1,35 +1,117 @@
-@import "https://fonts.googleapis.com/css?family=Lato:100";
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+.contentRect {
+    text-align: left;
+    margin : 50px auto 0 auto;
+    width: 925px;
+    height: 417px;
+    mix-blend-mode: hard-light;
+    border-radius: 20px;
+    background-color: rgba(205, 205, 205, 0.85);
+    font-family: fantasy;
+    font-size: 24px;
+    color: white;
 }
 
-html {
-    overflow: hidden;
-    font-size: 10px;
-    font-family: "Lato", Arial, fantasy;
+.baseInsideRect {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    mix-blend-mode: hard-light;
+    padding: 10px 10px 10px 10px;
+    border-radius: 20px;
+    background-color: rgba(205, 205, 205, 0.85);
+    font-family: Rockwell, fantasy;
+    font-size: 18px;
+    color: black;
 }
 
-body {
-    overflow: hidden;
-    width: 100%;
-    height: 100vmax;
-    color: #fff;
-    background: linear-gradient(-45deg, #EE7752, #E73C73, #23A6D5, #23D5AB);
-    background-size: 400% 400%;
+.baseLetter {
+    position: absolute;
+    padding: 3px;
+    font-family: Roboto Serif, fantasy;
+    font-size: 16px;
+}
+
+.baseInsideRect.taskRect {
+    margin-left: -400px;
+    margin-top: -170px;
+    width: 500px;
+    height: 70px;
+    text-align: center;
+}
+
+.baseInsideRect.taskPhoto {
+    margin-left: 150px;
+    margin-top: -170px;
+    width: 250px;
+    height: 250px;
+}
+
+/* Y */
+.baseInsideRect.yRect {
+    margin-left: -140px;
+    margin-top: -70px;
+    width: 240px;
+    height: 150px;
+
+    font-family: fantasy;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 19px;
+    text-align: center;
+}
+
+.baseInsideRect.yRect > input {
+    font-size: 14px;
     position: relative;
-    animation: changeBack 10s ease-in-out infinite;
+    border-radius: 4px;
+    width: 100%;
+    height: 30%;
+    top: 40%;
+    mix-blend-mode: luminosity;
+    vertical-align: middle;
+    text-align: center;
+    background-color: rgba(255, 255, 255, 0.85);
 }
 
-@keyframes changeBack {
-    0% {
-        background-position: 0 50%;
-    }
-    50% {
-        background-position: 100% 50%;
-    }
-    100% {
-        background-position: 0 50%;
-    }
+/* X */
+.baseInsideRect.xRect {
+    margin-left: -400px;
+    margin-top: -70px;
+    width: 240px;
+    height: 150px;
+
+    font-family: fantasy;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 19px;
+    text-align: center;
+}
+
+.baseInsideRect.xRect > input {
+    font-size: 14px;
+    position: relative;
+    border-radius: 4px;
+    width: 100%;
+    height: 30%;
+    top: 40%;
+    mix-blend-mode: luminosity;
+    vertical-align: middle;
+    text-align: center;
+    background-color: rgba(255, 255, 255, 0.85);
+}
+
+
+/* R */
+.baseInsideRect.rRect {
+    margin-left: -400px;
+    margin-top: 110px;
+    width: 500px;
+    height: 80px;
+}
+
+.baseLetter.rLetter {
+    margin-top: -10px;
+    margin-left: 240px;
 }
