--- a/web/templates/main-form.xhtml
+++ b/web/templates/main-form.xhtml
@@ -14,17 +14,19 @@
         <h:form id="form">
             <div class="baseInsideRect xRect">
                 <span class="baseLetter xLetter">X</span>
-                <h:selectOneRadio value = "#{mainBean.newEntry.x}">
-                    <f:selectItem itemValue = "-3" itemLabel = "-3" />
-                    <f:selectItem itemValue = "-2" itemLabel = "-2" />
-                    <f:selectItem itemValue = "-1" itemLabel = "-1" />
-                    <f:selectItem itemValue = "0" itemLabel = "0" />
-                    <f:selectItem itemValue = "1" itemLabel = "1" />
-                    <f:selectItem itemValue = "2" itemLabel = "2" />
-                    <f:selectItem itemValue = "3" itemLabel = "3" />
-                    <f:selectItem itemValue = "4" itemLabel = "4" />
-                    <f:selectItem itemValue = "5" itemLabel = "5" />
-                </h:selectOneRadio>
+                <div class="selectBox">
+                    <h:selectOneRadio value = "#{mainBean.newEntry.x}" id="selectRadio">
+                        <f:selectItem itemValue = "-3" itemLabel = "-3" />
+                        <f:selectItem itemValue = "-2" itemLabel = "-2" />
+                        <f:selectItem itemValue = "-1" itemLabel = "-1" />
+                        <f:selectItem itemValue = "0" itemLabel = "0" />
+                        <f:selectItem itemValue = "1" itemLabel = "1" />
+                        <f:selectItem itemValue = "2" itemLabel = "2" />
+                        <f:selectItem itemValue = "3" itemLabel = "3" />
+                        <f:selectItem itemValue = "4" itemLabel = "4" />
+                        <f:selectItem itemValue = "5" itemLabel = "5" />
+                    </h:selectOneRadio>
+                </div>
             </div>
 
             <div class="baseInsideRect yRect">
@@ -36,12 +38,38 @@
                     <f:validateDoubleRange minimum="-3" maximum="3" />
                     <f:ajax event="change" render="messageY"/>
                 </h:inputText>
-                <h:message id="messageY" for="y_chooser"/>
+                <div class="inputBox">
+                    <h:message id="messageY" for="y_chooser"/>
+                </div>
             </div>
 
             <div class="baseInsideRect rRect">
                 <span class="baseLetter rLetter">R</span>
+                <div class="commandLinkBox">
+                    <h:commandLink value = "#{mainBean.newEntry.r=1}" styleClass="link">
+                        <f:ajax execute="@form" render="@none" />
+                    </h:commandLink>
+
+                    <h:commandLink value = "#{mainBean.newEntry.r=2}" styleClass="link">
+                        <f:ajax execute="@form" render="@none" />
+                    </h:commandLink>
+
+                    <h:commandLink value = "#{mainBean.newEntry.r=3}" styleClass="link">
+                        <f:ajax execute="@form" render="@none" />
+                    </h:commandLink>
+
+                    <h:commandLink value = "#{mainBean.newEntry.r=4}" styleClass="link">
+                        <f:ajax execute="@form" render="@none" />
+                    </h:commandLink>
+
+                    <h:commandLink value = "#{mainBean.newEntry.r=5}" styleClass="link">
+                        <f:ajax execute="@form" render="@none" />
+                    </h:commandLink>
+                </div>
             </div>
+
+            <h:commandButton id="submit" action="#{mainBean.addEntry}" value="ПроверОЧКА" styleClass="checkButton buttonLetter"/>
+
         </h:form>
     </div>
 </h:body>
