--- a/web/templates/main-form.xhtml
+++ b/web/templates/main-form.xhtml
@@ -15,12 +15,12 @@
             <div class="baseInsideRect xRect">
                 <span class="baseLetter xLetter">X</span>
                 <div class="selectBox">
-                    <h:selectOneRadio value = "#{mainBean.newEntry.x}" id="selectRadio">
+                    <h:selectOneRadio value = "#{mainBean.newEntry.x}" id="selectRadio" required="true">
                         <f:selectItem itemValue = "-3" itemLabel = "-3" />
                         <f:selectItem itemValue = "-2" itemLabel = "-2" />
                         <f:selectItem itemValue = "-1" itemLabel = "-1" />
                         <f:selectItem itemValue = "0" itemLabel = "0" />
-                        <f:selectItem itemValue = "1" itemLabel = "1" />
+                        <f:selectItem itemValue = "1.0" itemLabel = "1" />
                         <f:selectItem itemValue = "2" itemLabel = "2" />
                         <f:selectItem itemValue = "3" itemLabel = "3" />
                         <f:selectItem itemValue = "4" itemLabel = "4" />
@@ -46,29 +46,34 @@
             <div class="baseInsideRect rRect">
                 <span class="baseLetter rLetter">R</span>
                 <div class="commandLinkBox">
-                    <h:commandLink value = "#{mainBean.newEntry.r=1}" styleClass="link">
+                    <h:commandLink value = "1" styleClass="link">
                         <f:ajax execute="@form" render="@none" />
+                        <f:setPropertyActionListener target="#{mainBean.newEntry.r}" value="1.0" />
                     </h:commandLink>
 
-                    <h:commandLink value = "#{mainBean.newEntry.r=2}" styleClass="link">
+                    <h:commandLink value = "2" styleClass="link">
                         <f:ajax execute="@form" render="@none" />
+                        <f:setPropertyActionListener target="#{mainBean.newEntry.r}" value="2.0" />
                     </h:commandLink>
 
-                    <h:commandLink value = "#{mainBean.newEntry.r=3}" styleClass="link">
+                    <h:commandLink value = "3" styleClass="link">
                         <f:ajax execute="@form" render="@none" />
+                        <f:setPropertyActionListener target="#{mainBean.newEntry.r}" value="3.0" />
                     </h:commandLink>
 
-                    <h:commandLink value = "#{mainBean.newEntry.r=4}" styleClass="link">
+                    <h:commandLink value = "4" styleClass="link">
                         <f:ajax execute="@form" render="@none" />
+                        <f:setPropertyActionListener target="#{mainBean.newEntry.r}" value="4.0" />
                     </h:commandLink>
 
-                    <h:commandLink value = "#{mainBean.newEntry.r=5}" styleClass="link">
+                    <h:commandLink value = "5" styleClass="link">
                         <f:ajax execute="@form" render="@none" />
+                        <f:setPropertyActionListener target="#{mainBean.newEntry.r}" value="5.0" />
                     </h:commandLink>
                 </div>
             </div>
 
-            <h:commandButton id="submit" action="#{mainBean.addEntry}" value="ПроверОЧКА" styleClass="checkButton buttonLetter"/>
+            <h:commandButton id="submit" action="#{mainBean.addEntry()}" value="ПроверОЧКА" styleClass="checkButton buttonLetter"/>
 
         </h:form>
     </div>
