--- a/web/templates/main-form.xhtml
+++ b/web/templates/main-form.xhtml
@@ -7,10 +7,12 @@
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
       xmlns:c="http://java.sun.com/jsp/jstl/core">
 
-<h:body onload="setCurrentX('1'); draw(); setCurrentR(1); GetCellValues(); redrawWithNewR()">
+<h:body onload="setCurrentX('0'); draw(); setCurrentR(1); redrawWithNewR()" >
     <h:outputScript library="js" name="interactiveCanvas.js" />
 
     <div class="contentRect animated zoomIn">
+        <h:button class='photo close' outcome="to_index" />
+
         <div class="baseInsideRect taskRect">
             Введите данные для определения вхождения точки в представленную область
         </div>
@@ -28,7 +30,7 @@
                         <f:selectItem itemValue = "-2" itemLabel = "-2" />
                         <f:selectItem itemValue = "-1" itemLabel = "-1" />
                         <f:selectItem itemValue = "0" itemLabel = "0" />
-                        <f:selectItem itemValue = "1.0" itemLabel = "1" />
+                        <f:selectItem itemValue = "1" itemLabel = "1" />
                         <f:selectItem itemValue = "2" itemLabel = "2" />
                         <f:selectItem itemValue = "3" itemLabel = "3" />
                         <f:selectItem itemValue = "4" itemLabel = "4" />
@@ -43,7 +45,10 @@
                              requiredMessage="Введите Y!"
                              converterMessage="Y должен быть числом, лежащим в промежутке (-3; 3)!"
                              validatorMessage="Y должен лежать в промежутке(-3; 3)!">
-                    <f:validateDoubleRange minimum="-3" maximum="3" />
+                    <f:validator validatorId="validateY"/>
+                    <f:converter converterId="convertY" />
+                    <f:attribute name="minFractionDigits" value="-3"/>
+                    <f:attribute name="maxFractionDigits" value="3"/>
                     <f:ajax event="change" render="messageY"/>
                 </h:inputText>
                 <div class="inputBox">
@@ -54,35 +59,34 @@
             <div class="baseInsideRect rRect">
                 <span class="baseLetter rLetter">R</span>
                 <div class="commandLinkBox">
-                    <h:commandLink value = "1" styleClass="link" onclick="clearCanvas(); setCurrentR(1); GetCellValues(); redrawWithNewR(); update()">
+                    <h:commandLink value = "1" styleClass="link" onclick="clearCanvas(); setCurrentR(1); redrawWithNewR(); update()">
                         <f:ajax execute="@form" render="@none" />
-                        <f:setPropertyActionListener target="#{mainBean.newEntry.r}" value="1.0" />
+                        <f:setPropertyActionListener target="#{mainBean.newEntry.r}" value="1" />
                     </h:commandLink>
 
-                    <h:commandLink value = "2" styleClass="link" onclick="clearCanvas(); setCurrentR(2); GetCellValues(); redrawWithNewR(); update()">
+                    <h:commandLink value = "2" styleClass="link" onclick="clearCanvas(); setCurrentR(2); redrawWithNewR(); update()">
                         <f:ajax execute="@form" render="@none" />
-                        <f:setPropertyActionListener target="#{mainBean.newEntry.r}" value="2.0" />
+                        <f:setPropertyActionListener target="#{mainBean.newEntry.r}" value="2" />
                     </h:commandLink>
 
-                    <h:commandLink value = "3" styleClass="link" onclick="clearCanvas(); setCurrentR(3); GetCellValues(); redrawWithNewR(); update()">
+                    <h:commandLink value = "3" styleClass="link" onclick="clearCanvas(); setCurrentR(3); redrawWithNewR(); update()">
                         <f:ajax execute="@form" render="@none" />
-                        <f:setPropertyActionListener target="#{mainBean.newEntry.r}" value="3.0" />
+                        <f:setPropertyActionListener target="#{mainBean.newEntry.r}" value="3" />
                     </h:commandLink>
 
-                    <h:commandLink value = "4" styleClass="link" onclick="clearCanvas(); setCurrentR(4); GetCellValues(); redrawWithNewR(); update()">
+                    <h:commandLink value = "4" styleClass="link" onclick="clearCanvas(); setCurrentR(4); redrawWithNewR(); update()">
                         <f:ajax execute="@form" render="@none" />
-                        <f:setPropertyActionListener target="#{mainBean.newEntry.r}" value="4.0" />
+                        <f:setPropertyActionListener target="#{mainBean.newEntry.r}" value="4" />
                     </h:commandLink>
 
-                    <h:commandLink value = "5" styleClass="link" onclick="clearCanvas(); setCurrentR(5); GetCellValues(); redrawWithNewR(); update()">
+                    <h:commandLink value = "5" styleClass="link" onclick="clearCanvas(); setCurrentR(5); redrawWithNewR(); update()">
                         <f:ajax execute="@form" render="@none" />
-                        <f:setPropertyActionListener target="#{mainBean.newEntry.r}" value="5.0" />
+                        <f:setPropertyActionListener target="#{mainBean.newEntry.r}" value="5" />
                     </h:commandLink>
                 </div>
             </div>
 
             <h:commandButton id="submit" action="#{mainBean.addEntry()}" update="resultTable" value="ПроверОЧКА" styleClass="checkButton buttonLetter">
-                <f:ajax execute="@form" render="@form resultTable" />
             </h:commandButton>
         </h:form>
 
